openshift/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fgo-backend
  labels:
    app.kubernetes.io/part-of: fgo
    app.kubernetes.io/component: backend
