openshift/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-operacao
  namespace: fgo-backend
  labels:
    app.kubernetes.io/name: ms-operacao
    app.kubernetes.io/part-of: fgo
spec:
  selector:
    app: ms-operacao
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
